# rabotaby_bot

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Bot.py  Data.py  Main.py  README.md  SearchTemplates.db  Telegram.py  data.py  list_commands.md  parsing.py  pyproject.toml  requirements.txt  telegram.py  test_data.py  test_settings.py
